# NGP_TeamProject

./: .clang-format  .gitignore  CMakeLists.txt  WindowProgrammingTeamProject.sln  WindowProgrammingTeamProject.slnLaunch
Client/: Client.vcxproj  Client.vcxproj.filters  looog.txt  main.cpp  network_util.hpp  protocol.hpp  resource.h
Server/: Server.vcxproj  Server.vcxproj.filters  common.cpp  common.h  main.cpp  map.cpp  map.h  sendParam.hpp  server.cpp
ServerMock/: ServerMock.vcxproj  ServerMock.vcxproj.filters  main.cpp
WindowProgrammingTeamProject/: WindowProgrammingTeamProject.vcxproj
WindowProgrammingTeamProject/WindowProgrammingTeamProject/: WindowProgrammingTeamProject.vcxproj  WindowProgrammingTeamProject.vcxproj.filters
src/: main.cpp
